<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".MainActivity">

    <!-- Toolbar components start -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/pink"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_main_toolbar_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_toolbar_title"
        android:textColor="@color/red"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/activity_main_toolbar"
        app:layout_constraintEnd_toEndOf="@id/activity_main_toolbar"
        app:layout_constraintStart_toStartOf="@id/activity_main_toolbar"
        app:layout_constraintTop_toTopOf="@id/activity_main_toolbar"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/activity_main_toolbar_menu"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/orange"
        android:contentDescription="@string/description_popup_menu"
        android:onClick="showPopup"
        android:src="@drawable/ic_baseline_menu_36_black"
        app:layout_constraintBottom_toBottomOf="@id/activity_main_toolbar"
        app:layout_constraintEnd_toEndOf="@id/activity_main_toolbar"
        app:layout_constraintTop_toTopOf="@id/activity_main_toolbar" />
    <!-- Toolbar components end -->

    <TextView
        android:id="@+id/activity_main_input_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/activity_main_input_instruction"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_main_toolbar"
        tools:ignore="TextContrastCheck" />


    <EditText
        android:id="@+id/activity_main_user_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/activity_main_edittext_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_main_input_instruction" />

    <TextView
        android:id="@+id/activity_main_server_response"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/activity_main_server_response"
        android:textColor="@color/green"
        app:layout_constraintBottom_toTopOf="@id/activity_main_send_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_main_user_input"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/activity_main_send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:background="@color/black"
        android:onClick="sendMessage"
        android:text="@string/activity_main_send"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>